--- a/style.css
+++ b/style.css
@@ -19,3 +19,21 @@
 {
     font-size: 22px;
 }
+
+.modal-dialog
+{
+    width: 70%;
+}
+
+.modal-body
+{
+    text-align: left;
+    font-size: 20px;
+}
+
+h4
+{
+    background-color: gray;
+    color: white;
+    line-height: 2;
+}
